--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,14 +7,15 @@
       "forceConsistentCasingInFileNames": true,
       "strict": true,
       "noImplicitOverride": true,
-      "noPropertyAccessFromIndexSignature": true,
+      "noPropertyAccessFromIndexSignature": false,
       "noImplicitReturns": true,
       "noFallthroughCasesInSwitch": true,
       "sourceMap": true,
       "declaration": false,
       "downlevelIteration": true,
       "experimentalDecorators": true,
-      "moduleResolution": "node",
+     "strictPropertyInitialization": false,
+     "moduleResolution": "node",
       "importHelpers": true,
       "target": "es2020",
       "module": "es2020",
